; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/planner/extr_query_pushdown_planning.c_RelationInfoContainsOnlyRecurringTuples.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/planner/extr_query_pushdown_planning.c_RelationInfoContainsOnlyRecurringTuples.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32** }
%struct.TYPE_5__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_6__*, %struct.TYPE_5__*)* @RelationInfoContainsOnlyRecurringTuples to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @RelationInfoContainsOnlyRecurringTuples(%struct.TYPE_6__* %0, %struct.TYPE_5__* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %4, align 8
  store %struct.TYPE_5__* %1, %struct.TYPE_5__** %5, align 8
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @bms_copy(i32 %12)
  store i32 %13, i32* %7, align 4
  store i32 -1, i32* %8, align 4
  br label %14

14:                                               ; preds = %30, %2
  %15 = load i32, i32* %7, align 4
  %16 = call i32 @bms_first_member(i32 %15)
  store i32 %16, i32* %8, align 4
  %17 = icmp sge i32 %16, 0
  br i1 %17, label %18, label %31

18:                                               ; preds = %14
  %19 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %20 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %19, i32 0, i32 0
  %21 = load i32**, i32*** %20, align 8
  %22 = load i32, i32* %8, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds i32*, i32** %21, i64 %23
  %25 = load i32*, i32** %24, align 8
  store i32* %25, i32** %9, align 8
  %26 = load i32*, i32** %9, align 8
  %27 = call i32 @IsRecurringRTE(i32* %26, i32* %6)
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %30, label %29

29:                                               ; preds = %18
  store i32 0, i32* %3, align 4
  br label %32

30:                                               ; preds = %18
  br label %14

31:                                               ; preds = %14
  store i32 1, i32* %3, align 4
  br label %32

32:                                               ; preds = %31, %29
  %33 = load i32, i32* %3, align 4
  ret i32 %33
}

declare dso_local i32 @bms_copy(i32) #1

declare dso_local i32 @bms_first_member(i32) #1

declare dso_local i32 @IsRecurringRTE(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
